<resources>
    <string name="app_name">BetFootball</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketball_maker">Basketball Maker</string>
    <string name="start">Start</string>
    <string name="my_bets">My Bets</string>
    <string name="news">News</string>
    <string name="how_to_play">How to play</string>
    <string name="settings">Settings</string>
    <string name="brightness">Brightness</string>
    <string name="vibration">Vibration</string>
    <string name="sound_volume">Sound volume</string>
    <string name="how_to_play_text">The player is given the chance to generate his own basketball standings from the available teams by playing matches according to the specified settings. The player\'s task is to achieve the victory of one of the teams by playing games with all opponents</string>
    <string name="choose_first_team">Choose first team</string>
    <string name="next">Next</string>
    <string name="attacking_against_a_zone_defence">Attacking against a zone defence</string>
    <string name="choose_second_team">Choose second team</string>
    <string name="formation_team">Formation team</string>
    <string name="bet">Bet</string>
    <string name="first_team">first team</string>
    <string name="_000">000</string>
    <string name="vs">vs</string>
    <string name="_1">1</string>
    <string name="second_team">second team</string>
    <string name="_1_25">1.25</string>
    <string name="place_a_bet_on_one_of_the_match_outcomes">Place a bet on one of the match outcomes</string>
    <string name="match_result">Match result</string>
    <string name="you_bet_on">"You bet on: "</string>
    <string name="ok">OK</string>
    <string name="wins">" wins"</string>
    <string name="draw">Draw</string>
    <string name="_0">0</string>
    <string name="restart">Restart</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="congratulations_you_win">Congratulations! You win!</string>
    <string name="sorry_you_didn_t_win_this_time">Sorry, you did not win this time.</string>
    <string name="description">Description</string>
    <string name="title1">AZAR IS TRYING TO BE DISSURED TO END CAREER</string>
    <string name="desc1">Midfielder Eden Hazard has not yet decided on his future.\n\nHe wants to end his career, but his entourage dissuades him, writes Foot Mercato. They want him to keep playing.\n\nHazard had options with Nice, Marseille, Lille, MLS clubs and Saudi Arabia. He rejected all offers.\n\nHazard left Real Madrid in May.</string>
    <string name="title2">EX-FORWARD DYNAMO MADE POKER IN CYPRUS CHAMPIONSHIP MATCH\n</string>
    <string name="desc2">AEK Larnaca played a draw with Ethnikos in the match of the 6th round of the Cypriot Championship.\n\nFour goals in the match were scored by forward Fran Sol for AEK. He scored a hat-trick before the break.\n\nHowever, he didn\'t help his team win. These are Sol\'s first goals for the new club.\n\nThe Spaniard joined AEK in the summer as a free agent. He left Dynamo.\n\nHe spent the last season on loan at Malaga, but scored only three goals there.</string>
    <string name="title3">TRUBIN\'S COMPETITOR IN BENFICA RECEIVED AN OFFER FROM THE Premier League</string>
    <string name="desc3">Benfica goalkeeper Odysseas Vlachodimos has come to the attention of Nottingham Forest, who are looking for a goalkeeper, according to insider Fabrizio Romano on Twitter.\n\nKeylor Navas defended the goal last season, who returned to PSG at the end of his loan.\n\nVlachodimos lost his place in based in Benfica after a quarrel with head coach Roger Schmidt.\n\nNottingham Forest estimates Vlachodimos at 9 million euros.\n\nIt was reported that Vlachodimos agreed on the terms of the contract with Manchester United.</string>
    <string name="title4">LEEDS ALMOST CLOSED RANGERS KAMARA DEAL</string>
    <string name="desc4">According to Fabrizio Romano, Leeds have officially offered terms to Rangers midfielder Glen Kamar.\n\nNegotiations between the clubs are in their final stages and the deal is expected to be finalized next week.\n\nThe 27-year-old Finnish player himself has already agreed to a move. \n\nGlen Kamara has been with the Rangers since January 2019. During this time, he accumulated 9 goals and 11 assists in 193 appearances for the club.</string>
    <string name="title5">VERRATTI MAY BE IN GALATASARAI\n</string>
    <string name="desc5">Marco Verratti received an offer from Turkey\'s Galatasaray\n\nIn addition, clubs from Saudi Arabia and Qatar continue to show serious interest in the 30-year-old Italian.\n\nTransfermarkt estimates the player at 40 million euros.</string>
    <string name="title6">BENFICA TRUBINA WAS BEAT IN THE PORTUGAL CHAMPIONSHIP WITH JIL VICENTE</string>
    <string name="desc6">"As part of the third round of the Portuguese championship, Benfica played away with Gil Vicente.\n\nDespite the high expectations from Ukrainian fans, goalkeeper Anatoly Trubin remained in Benfica's reserve. Local keeper Samuel Soares played at the base of the Eagles.\n\nBenfica took the lead in In the second half, Lisbon responded to two goals from the hosts with their two effective attacks. As a result, Roger Schmidt's team won 2:3. "</string>
    <string name="title7">FRESNEDA GOES TO SPORTING</string>
    <string name="desc7">Ivan Fresneda joins Sporting CP from Real Valladolid. This is reported by insider Fabrizio Romano.\n\nThe transfer amount will be 9 million euros + 3 million bonuses. The player will sign a contract until the summer of 2028.\n\nTransfermarkt estimates the full-back at 15 million euros.\n\nIt was previously reported that Sporting had contacted Napoli over Zanoli.</string>
    <string name="title8">КАСИЛЬЯС О РУБИАЛИСЕ: «ЭТО ПОЗОР»</string>
    <string name="desc8">Two-time Euro winner and World champion Iker Casillas reacted not to the decision of the President of the Spanish Football Federation to remain in his position.\n\nI think this is a disgrace.\n\n\nRecall that during the awarding of the winners in the final of the Women\'s World Cup, Rubiales allowed himself kiss on the lips of a Spanish football player.</string>
    <string name="title9">MOUTINHO IS A PLAYER OF BRAGA</string>
    <string name="desc9">Joao Moutinho moved to Braga.\n\nThe Portuguese joined the new team as a free agent. The midfielder signed a contract until the summer of 2024.\n\nThe player\'s salary will be only 400 thousand euros per season.\n\nLast season, Moutinho played in 36 matches for Wolverhampton, in which he scored 2 assists.\n\nPreviously it was reported that Man City have offered more than €50m for the Wolverhampton midfielder.</string>
    <string name="title10">SERGIO RAMOS CAN STILL MOVE TO TURKEY</string>
    <string name="desc10">Sergio Ramos, 37, a free agent, is in demand in the Turkish Super League.\n\nThe Real Madrid and Spain legend is now considering Galatasaray, according to insider Nicolo Schira.\n\nThe current Turkish champion has advanced in negotiations with the Spanish centre-back, which was previously traded by another Istanbul grandee - Besiktas.\n\nIt was previously reported that Ramos could continue his career in Milan.</string>
    <string name="title11">MUDRIK WAS AWARDED WITH A PRESTIGIOUS TITLE</string>
    <string name="desc11">Ukrainian midfielder of London Chelsea Mykhailo Mudryk received the title of Honorary Citizen of the city of Krasnograd, Kharkiv region, of which he is a native.\n\nMudryk was brought up in the academies of Metallist and Shakhtar. In January, the Ukrainian winger moved from the Donetsk club to London\'s Chelsea.\n\nThe City Council of Krasnograd on August 25 decided to award Mudrik the title of Honorary Citizen of the city.\n\nEarlier it was reported that the 22-year-old winger was injured.</string>
    <string name="title12">DI MARIA ON HIS RETURN TO BENFICA: \'I CHOOSE WITH MY HEART\'\nThe player had offers from Saudi Arabia</string>
    <string name="desc12">Experienced Argentina winger Angel Di Maria has returned to Portugal\'s Benfica this summer. The Argentine admitted that he received generous offers from Saudi Arabia, but rejected them:\n\n "I got a lot of calls from Saudi Arabia, they were crazy offers, but I chose with my heart, so I moved to Benfica," said the player.\n\ n\n Di Maria joined Benfica as a free agent after his contract with Juventus Turin expired.\n\nThe 35-year-old Argentine had previously played for the Eagles in 2007-2010.</string>
    <string name="title13">FURTHER VORSKLA? GREENWOOD AFTER EXPIRED FROM MANCHESTER UNITED IS GOING TO EXOTIC CHAMPIONSHIP\nThe Mancunians got rid of the pupil</string>
    <string name="desc13">Manchester United winger Mason Greenwood is in talks with an unnamed Albanian club, according to the Mirror.\n\nMan Utd announced on Monday that Greenwood would be leaving the club following an internal investigation.\n\nWhile other English clubs were speculated to be monitoring the striker\'s situation, the move the border would help reduce attention to himself on the field and beyond.\n\nIf Greenwood\'s move to Albania takes place, according to the good old tradition, the Englishman can go from the local championship to Vorskla, which has become the second home for a number of foreign players from the Balkans.\n\ Previously, clubs in Saudi Arabia refused to transfer Greenwood.</string>
    <string name="title15">DESCHAMPS: HENRI IS VERY HAPPY TO BE CHOSEN TO COACH THE YOUTH TEAM. He has taken over the U-21 team</string>
    <string name="desc15">France head coach Didier Deschamps spoke to L\'Equipe about Thierry Henry\'s appointment to the Under-21 team.\n\n"Thierry Henry is very pleased to have been chosen for this position. He was very motivated, I'm happy for him. He is one of those with whom I have always had a good relationship, built on great respect. If he had the opportunity to lead this team, then why not? It's like when you ask if a footballer made the right choice by joining a particular club. Unfortunately, we won't know about it right away.\nThierry will be judged by his results. By qualification for the next Euro, for the Olympic Games. Thierry is Thierry. He has credibility based on his playing career. He has experience as a coach, he is fully prepared, he will do his best.”\n\n\nHe will prepare the team for the 2024 Olympics.</string>
    <string name="teams">Teams</string>
    <string name="tactics">Tactics</string>
    <string name="player_name">Player Name</string>
    <string name="poland">Poland</string>
    <string name="positional_attack">Positional attack</string>
    <string name="counter_attack_fast_break">Counter-attack (fast break)</string>
    <string name="pressing_defence">Pressing defence</string>
    <string name="mixed_defence">Mixed defence</string>
    <string name="zone_defence">Zone defence</string>
    <string name="defence_against_the_ball_carrier">Defence against the ball carrier</string>
</resources>