<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".presentation.fragments.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/red_view"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/view_red_back"
        app:layout_constraintEnd_toEndOf="@id/tv_settings"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_settings" />

    <TextView
        android:id="@+id/soundLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/sound_volume"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red_view" />

    <SeekBar
        android:id="@+id/soundSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/color_sound_seekbar_progress"
        android:thumbTint="@color/color_sound_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundLabel" />

    <TextView
        android:id="@+id/vibrationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/vibration"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundSeekBar" />

    <SeekBar
        android:id="@+id/vibrationSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/color_sound_seekbar_progress"
        android:thumbTint="@color/color_sound_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrationLabel" />

    <TextView
        android:id="@+id/brightnessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/brightness"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrationSeekBar" />

    <SeekBar
        android:id="@+id/brightnessSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:progressTint="@color/color_sound_seekbar_progress"
        android:thumbTint="@color/color_sound_seekbar_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brightnessLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
